# EvoJump

./: .coverage  .cursorrules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  LICENSE  README.md  coverage.xml  demo_testing.py  pyproject.toml  run_all_examples.py  run_all_tests.py  run_tests.py  sample_developmental_data.csv
demo_outputs/: demo_report.json
docs/: advanced_methods.rst  advanced_usage.rst  api_reference.rst  architecture.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  troubleshooting.rst
drosophila_case_study_outputs/: IMPROVEMENTS_SUMMARY.md  drosophila_analysis_report.json  drosophila_population_data.csv
enhanced_animations/: enhanced_animation_report.json
examples/: README.md  advanced_features_demo.py  animation_demo.py  basic_usage.py  basic_usage_fixed.py  comprehensive_advanced_analytics_demo.py  comprehensive_animation_demo.py  comprehensive_demo.py  drosophila_case_study.py  enhanced_animation_demo.py  performance_benchmarks.py  simple_animation_demo.py  simple_orchestrator.py  thin_orchestrator_examples.py  thin_orchestrator_working.py  working_demo.py
outputs/data/: synthetic_developmental_data.csv
paper/: README.md  author_info.tex  build_paper.sh  latex_template.tex  number-equations.lua  paper.md  paper_verification_report.md  render_drosophila_figures.py  render_figures.py
paper/figures/: drosophila_figures_summary.json
paper/output/: combined_paper.md  evojump_paper.html  pdf_ready.md
paper/sections/: 01_abstract.md  02_introduction.md  03_mathematical_foundations.md  04_statistical_methods.md  05_implementation.md  06_results.md  06a_drosophila_case_study.md  07_discussion.md  08_conclusion.md  09_references.md  10_figures.md  11_glossary.md  12_code.md
src/evojump/: __init__.py  analytics_engine.py  cli.py  datacore.py  evolution_sampler.py  jumprope.py  laserplane.py  trajectory_visualizer.py
tests/: test_advanced_features.py  test_analytics_engine.py  test_cli.py  test_datacore.py  test_drosophila_case_study.py  test_evolution_sampler.py  test_jumprope.py  test_laserplane.py  test_trajectory_visualizer.py
