# EvoJump Package Configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evojump"
version = "0.1.0"
description = "A Comprehensive Framework for Evolutionary Ontogenetic Analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EvoJump Development Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "numba>=0.56.0",
    "dask>=2022.0.0",
    "h5py>=3.7.0",
    "sqlalchemy>=1.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.62.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "PyWavelets>=1.3.0",
    "networkx>=2.6.0",
    "statsmodels>=0.13.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
gpu = [
    "cupy-cuda12>=12.0.0; sys_platform != 'darwin'",
    "jax>=0.3.0",
]
web = [
    "flask>=2.2.0",
    "dash>=2.0.0",
    "streamlit>=1.12.0",
]
r-integration = [
    "rpy2>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/evojump/evojump"
Documentation = "https://evojump.readthedocs.io/"
Repository = "https://github.com/evojump/evojump"
Issues = "https://github.com/evojump/evojump/issues"
Changelog = "https://github.com/evojump/evojump/blob/main/CHANGELOG.md"

[project.scripts]
evojump-cli = "evojump.cli:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=evojump",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=95",
]

[tool.coverage.run]
source = ["src/evojump"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
]
